[gd_scene load_steps=4 format=3 uid="uid://32sep17jxe0d"]

[ext_resource type="Script" uid="uid://com2nf15rl8jf" path="res://change_equipment.gd" id="1_g2txg"]
[ext_resource type="Script" uid="uid://dnuo6yrebtvqs" path="res://inventory.gd" id="2_n8b2i"]

[sub_resource type="LabelSettings" id="LabelSettings_t8i4g"]
font_size = 46

[node name="ChangeEquipment" type="Node2D"]
script = ExtResource("1_g2txg")

[node name="Label" type="Label" parent="."]
offset_left = 341.0
offset_top = 5.0
offset_right = 681.0
offset_bottom = 69.0
text = "Edit Equipment"
label_settings = SubResource("LabelSettings_t8i4g")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 81.0
offset_top = 92.0
offset_right = 429.0
offset_bottom = 604.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemShowcase" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Inventory" type="Node" parent="."]
script = ExtResource("2_n8b2i")

[node name="Button" type="Button" parent="."]
offset_left = 500.0
offset_top = 105.0
offset_right = 701.0
offset_bottom = 136.0
text = "Show Phys DPS Weapons"

[node name="Button2" type="Button" parent="."]
offset_left = 505.0
offset_top = 153.0
offset_right = 706.0
offset_bottom = 184.0
text = "Show Magic Hats"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
